"""
Model Worker Client for cross-process model serving.

This module provides a Python client for connecting to model worker processes,
enabling GPU-efficient model sharing across process boundaries.
"""

from typing import Optional, Dict
import asyncio
import logging

logger = logging.getLogger(__name__)


class ModelWorkerClient:
    """
    Client for connecting to model worker processes.
    
    Example:
        >>> client = ModelWorkerClient("grpc://localhost:50051")
        >>> await client.connect()
        >>> result = await client.infer(input_tensor)
        >>> await client.close()
    """
    
    def __init__(self, endpoint: str):
        """
        Create a client.
        
        Args:
            endpoint: Worker endpoint (e.g., "grpc://localhost:50051")
        """
        self._endpoint = endpoint
        self._connected = False
        logger.info(f"ModelWorkerClient created for {endpoint}")
    
    async def connect(self):
        """Establish connection to worker"""
        logger.info(f"Connecting to worker at {self._endpoint}")
        # TODO: Implement gRPC connection
        self._connected = True
        logger.info("Connected to worker")
    
    async def infer(
        self,
        input_tensor: 'TensorBuffer',
        parameters: Optional[Dict[str, str]] = None
    ) -> 'TensorBuffer':
        """
        Submit inference request.
        
        Args:
            input_tensor: Input tensor
            parameters: Optional parameters
            
        Returns:
            Output tensor
        """
        if not self._connected:
            raise RuntimeError("Not connected to worker")
        
        # TODO: Implement gRPC inference call
        logger.warning("ModelWorkerClient.infer() is a placeholder - needs gRPC integration")
        
        # Return placeholder
        return input_tensor
    
    async def health_check(self) -> bool:
        """Check if worker is healthy"""
        if not self._connected:
            return False
        
        # TODO: Implement health check call
        return True
    
    async def status(self) -> Dict:
        """Get worker status"""
        if not self._connected:
            raise RuntimeError("Not connected to worker")
        
        # TODO: Implement status call
        return {
            "worker_id": "placeholder",
            "status": "ready",
            "current_load": 0,
        }
    
    async def close(self):
        """Close connection"""
        if self._connected:
            logger.info(f"Closing connection to {self._endpoint}")
            self._connected = False


class ResilientModelWorkerClient:
    """
    Model worker client with automatic reconnection.
    
    Example:
        >>> client = ResilientModelWorkerClient(
        ...     "grpc://localhost:50051",
        ...     max_retries=3,
        ...     retry_delay_ms=1000
        ... )
        >>> await client.connect()  # Auto-retries on failure
    """
    
    def __init__(
        self,
        endpoint: str,
        max_retries: int = 3,
        retry_delay_ms: int = 1000
    ):
        self._client = ModelWorkerClient(endpoint)
        self._max_retries = max_retries
        self._retry_delay_ms = retry_delay_ms
    
    async def connect(self):
        """Connect with automatic retries"""
        for attempt in range(self._max_retries + 1):
            try:
                await self._client.connect()
                return
            except Exception as e:
                if attempt < self._max_retries:
                    logger.warning(
                        f"Connection attempt {attempt + 1} failed, "
                        f"retrying in {self._retry_delay_ms}ms: {e}"
                    )
                    await asyncio.sleep(self._retry_delay_ms / 1000)
                else:
                    raise RuntimeError(
                        f"Failed to connect after {self._max_retries + 1} attempts"
                    ) from e
    
    async def infer(self, input_tensor, parameters=None):
        """Submit inference with automatic retry"""
        for attempt in range(self._max_retries + 1):
            try:
                return await self._client.infer(input_tensor, parameters)
            except Exception as e:
                if attempt < self._max_retries:
                    logger.warning(f"Inference attempt {attempt + 1} failed, retrying: {e}")
                    await asyncio.sleep(self._retry_delay_ms / 1000)
                else:
                    raise RuntimeError(
                        f"Inference failed after {self._max_retries + 1} attempts"
                    ) from e
    
    async def health_check(self):
        """Check worker health"""
        return await self._client.health_check()
    
    async def status(self):
        """Get worker status"""
        return await self._client.status()
    
    async def close(self):
        """Close connection"""
        await self._client.close()

