//! Client for connecting to model worker processes

use super::protocol::{InferRequest, InferResponse, WorkerStatusInfo, HealthCheckResponse};
use crate::tensor::TensorBuffer;
use anyhow::{Result, Context};
use std::collections::HashMap;

/// Client for connecting to model worker processes
pub struct ModelWorkerClient {
    /// Worker endpoint (e.g., "grpc://localhost:50051")
    endpoint: String,
    /// Connection state
    connected: bool,
}

impl ModelWorkerClient {
    /// Create a new client
    pub fn new(endpoint: String) -> Self {
        Self {
            endpoint,
            connected: false,
        }
    }
    
    /// Connect to the worker
    pub async fn connect(&mut self) -> Result<()> {
        tracing::info!("Connecting to model worker at {}", self.endpoint);
        
        // In full implementation, this would establish gRPC connection
        // For now, mark as connected
        self.connected = true;
        
        Ok(())
    }
    
    /// Submit inference request
    pub async fn infer(
        &self,
        input: TensorBuffer,
        parameters: Option<HashMap<String, String>>,
    ) -> Result<TensorBuffer> {
        if !self.connected {
            anyhow::bail!("Not connected to worker");
        }
        
        // Generate request ID
        let request_id = uuid::Uuid::new_v4().to_string();
        
        let mut request = InferRequest::new(request_id, input);
        if let Some(params) = parameters {
            for (k, v) in params {
                request = request.with_parameter(k, v);
            }
        }
        
        // In full implementation, this would:
        // 1. Send request over gRPC
        // 2. Wait for response
        // 3. Return output tensor
        
        // Placeholder for now
        tracing::warn!("ModelWorkerClient.infer() is a placeholder - needs gRPC integration");
        
        // Return empty tensor as placeholder
        Ok(TensorBuffer::default())
    }
    
    /// Check worker health
    pub async fn health_check(&self) -> Result<bool> {
        if !self.connected {
            return Ok(false);
        }
        
        // In full implementation, call health check endpoint
        tracing::debug!("Health check on {}", self.endpoint);
        Ok(true)
    }
    
    /// Get worker status
    pub async fn status(&self) -> Result<WorkerStatusInfo> {
        if !self.connected {
            anyhow::bail!("Not connected to worker");
        }
        
        // In full implementation, call status endpoint
        tracing::warn!("ModelWorkerClient.status() is a placeholder");
        
        // Return placeholder status
        Ok(WorkerStatusInfo {
            worker_id: "placeholder".to_string(),
            model_id: "placeholder".to_string(),
            status: super::protocol::WorkerStatus::Ready,
            current_load: 0,
            max_batch_size: 8,
            total_requests: 0,
            average_latency_ms: 0.0,
        })
    }
    
    /// Close connection
    pub async fn close(&mut self) -> Result<()> {
        if self.connected {
            tracing::info!("Closing connection to {}", self.endpoint);
            self.connected = false;
        }
        Ok(())
    }
    
    /// Check if connected
    pub fn is_connected(&self) -> bool {
        self.connected
    }
}

/// Client with automatic reconnection logic
pub struct ResilientModelWorkerClient {
    inner: ModelWorkerClient,
    max_retries: u32,
    retry_delay_ms: u64,
}

impl ResilientModelWorkerClient {
    /// Create a new resilient client
    pub fn new(endpoint: String, max_retries: u32, retry_delay_ms: u64) -> Self {
        Self {
            inner: ModelWorkerClient::new(endpoint),
            max_retries,
            retry_delay_ms,
        }
    }
    
    /// Connect with retries
    pub async fn connect(&mut self) -> Result<()> {
        let mut attempts = 0;
        
        loop {
            match self.inner.connect().await {
                Ok(()) => return Ok(()),
                Err(e) if attempts < self.max_retries => {
                    attempts += 1;
                    tracing::warn!(
                        "Connection attempt {} failed, retrying in {}ms: {}",
                        attempts,
                        self.retry_delay_ms,
                        e
                    );
                    tokio::time::sleep(Duration::from_millis(self.retry_delay_ms)).await;
                }
                Err(e) => {
                    return Err(e).context(format!(
                        "Failed to connect after {} attempts",
                        attempts + 1
                    ));
                }
            }
        }
    }
    
    /// Submit inference with automatic retry
    pub async fn infer(
        &self,
        input: TensorBuffer,
        parameters: Option<HashMap<String, String>>,
    ) -> Result<TensorBuffer> {
        let mut attempts = 0;
        
        loop {
            match self.inner.infer(input.clone(), parameters.clone()).await {
                Ok(output) => return Ok(output),
                Err(e) if attempts < self.max_retries => {
                    attempts += 1;
                    tracing::warn!("Inference attempt {} failed, retrying: {}", attempts, e);
                    tokio::time::sleep(Duration::from_millis(self.retry_delay_ms)).await;
                }
                Err(e) => {
                    return Err(e).context(format!(
                        "Inference failed after {} attempts",
                        attempts + 1
                    ));
                }
            }
        }
    }
    
    /// Get the inner client
    pub fn inner(&self) -> &ModelWorkerClient {
        &self.inner
    }
    
    /// Get mutable inner client
    pub fn inner_mut(&mut self) -> &mut ModelWorkerClient {
        &mut self.inner
    }
}

use std::time::Duration;

